ARM: n900_defconfig: add nf/iptables maasquerade

--- a/arch/arm/configs/n900_defconfig
+++ b/arch/arm/configs/n900_defconfig
@@ -100,6 +100,11 @@ CONFIG_IP_PNP_DHCP=y
 CONFIG_IP_PNP_BOOTP=y
 CONFIG_IP_PNP_RARP=y
 CONFIG_NETFILTER=y
+CONFIG_NF_CONNTRACK=y
+CONFIG_IP_NF_IPTABLES=y
+CONFIG_IP_NF_NAT=y
+CONFIG_IP_NF_TARGET_MASQUERADE=y
+CONFIG_NF_DUP_IPV6=y
 CONFIG_PHONET=m
 CONFIG_DNS_RESOLVER=y
 CONFIG_CAN=m
@@ -577,7 +582,6 @@ CONFIG_CRC_CCITT=y
 CONFIG_CRC_T10DIF=y
 CONFIG_CRC_ITU_T=y
 CONFIG_CRC7=y
-CONFIG_LIBCRC32C=y
 CONFIG_XZ_DEC=y
 CONFIG_DMA_CMA=y
 CONFIG_FONTS=y
